[tool.poetry]
name = "jjr2edit"
version = "0.1.0"
description = ""
authors = ["staticf0x <44530786+staticf0x@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
devtools = {extras = ["pygments"], version = "^0.11.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
